...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/favorites_LBL_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="14dp"
        android:text="@string/favorites_header"
        android:textColor="@color/text_primary"
...
