...
    <string name="pw_confirm">Confirm new password</string>
    <string name="pw_change">Change</string>
    <string name="pw_cancel">Cancel</string>
    <string name="pw_fill_all">Fill in all password fields</string>
    <string name="pw_mismatch">New passwords do not match</string>
    <string name="pw_changed">Password updated</string>
    <string name="gate_save">Sign-Up to save coupons</string>
    <string name="gate_copy">Sign-Up to copy the coupon code</string>
    <string name="gate_site">Sign-Up to go to the site</string>
    <string name="gate_offer">Sign-Up to view the offer</string>
    <string name="gate_word">Sign-Up</string>
    <string name="gate_share">Sign-Up to share coupons</string>
    <string name="share_action">Share coupon</string>
    <string name="share_dialog_title">Send to a friend</string>
...
